Correcion de errores

--- a/src/app/PagesAdmin/clientes/clientes.component.html
+++ b/src/app/PagesAdmin/clientes/clientes.component.html
@@ -1,4 +1,6 @@
+
 <div class="container-fluid" *ngIf="logoutbtn">
+  <strong><h2 class="text-center">Cliente</h2></strong>
   <div   class="row">
     <div  class="col-3 " id="ColIzq" >
 
