--- a/src/app/PagesAdmin/facturacion/facturacion.component.html
+++ b/src/app/PagesAdmin/facturacion/facturacion.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h5>Facturacion</h5>
+  <strong><h2 class="text-center">Facturacion</h2></strong>
   <form [formGroup]="factForm" (ngSubmit)="postdata()" >
     <div class="row">
 
