--- a/src/app/PagesAdmin/usuario-admin/usuario-admin.component.html
+++ b/src/app/PagesAdmin/usuario-admin/usuario-admin.component.html
@@ -1,4 +1,5 @@
 <div class="container-fluid" *ngIf="logoutbtn">
+  <strong><h2 class="text-center">Usuarios</h2></strong>
   <div   class="row">
     <div  class="col-3 " id="ColIzq" >
 
