--- a/src/app/PagesPublic/home/home.component.html
+++ b/src/app/PagesPublic/home/home.component.html
@@ -1,10 +1,10 @@
 
 <div class="container text-center">
- <h3 class="text-center">Bienvendo a la prueba-FullStack</h3>
+ <h3 class="text-center">Bienvenido  a la prueba-FullStack</h3>
 
  <div class="row align-items-center">
   <div class="col"></div>
-  <!-- <div class="col"><img src="https://planidear.com.ar/prueba-FullStack/assets/img/imagenHome.gif" class="rounded float-start clLogoIc" alt="..."></div> -->
+  <!-- <div class="col"><img src="https://planidear.com.ar/prueba-FullStack/assets/img/imagenHome.gif" class="rounded float-start clLogoIc" alt="..."></div>-->
 <div class="col"><img src="../../assets/img/imagenHome.gif" class="rounded float-start clLogoIc" alt="..."></div>
   <div class="col"></div>
 </div>
