--- a/src/app/PagesAdmin/lista-fact/lista-fact.component.html
+++ b/src/app/PagesAdmin/lista-fact/lista-fact.component.html
@@ -1,4 +1,5 @@
 <div class="container-fluid">
+  <strong><h2 class="text-center">Lista de Facturas</h2></strong>
   <!-- Inicio Formulario Edicion Factura -->
   <div *ngIf="ShowData" class="col-9 CentroHome" id="ColCentral">
     <form [formGroup]="usuaForm" >
